test/libyul/yulSyntaxTests/objects/data_hex_name.yul
object "A" {
  code {}
  data hex"11" ""
}
// ----
// ParserError 2314: (30-37): Expected 'StringLiteral' but got 'HexStringLiteral'
